[package]
name = "Chat"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14",features = ["full", "server"] }
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "servidor"
path = "src/servidor.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "json"
path = "src/json.rs"
